Fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   background-color: var(--color4);
 }
 header {
-  width: 50%;
+  width: 40%;
   margin: 1em auto;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: var(--color3);
